# scene-gen

./: CMakeLists.txt  README.md
src/: main.cpp
src/Tags/: BSDF.cpp  BSDF.hpp  Emitter.cpp  Emitter.hpp  Procedural.cpp  Procedural.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp  Tag.cpp  Tag.hpp  Texture.cpp  Texture.hpp  Types.hpp
